--- a/webview.html
+++ b/webview.html
@@ -3,6 +3,7 @@ const urlParams= new URLSearchParams(window.location.search);
 let v = '';
 let p = '';
 let t = '';
+let url = '';
 if(urlParams.has('version')){
 v = urlParams.get('version')
 }
@@ -14,9 +15,14 @@ if(urlParams.has('platform')){
 p = urlParams.get('platform')
 }
 
-if(v=='' && t ==''&& p==''){
-	window.location.replace(urlParams.get('url'));
+if(urlParams.has('url')){
+url = urlParams.get('url')
+}
+if(url=='screen'){
+	window.location.replace("http://10.129.108.67/karaoke/screen?type=" + t +"&version=" + v+"&platform="+p);
+}else if(url=='controller'){
+	window.location.replace("http://10.129.108.67/karaoke/controller?type=" + t +"&version=" + v+"&platform="+p);
 }else{
-	window.location.replace(urlParams.get('url') + "?type=" + t +"&version=" + v+"&platform="+p);
+	window.location.replace(urlParams.get('url'));
 }
 </script>
