--- a/webview.html
+++ b/webview.html
@@ -18,10 +18,11 @@ p = urlParams.get('platform')
 if(urlParams.has('url')){
 url = urlParams.get('url')
 }
+	const u = "http://remysong.com"
 if(url=='screen'){
-	window.location.replace("http://10.129.108.67/karaoke/screen?type=" + t +"&version=" + v+"&platform="+p);
+	window.location.replace(u + "/screen?type=" + t +"&version=" + v+"&platform="+p);
 }else if(url=='controller'){
-	window.location.replace("http://10.129.108.67/karaoke/controller?type=" + t +"&version=" + v+"&platform="+p);
+	window.location.replace(u + "/controller?type=" + t +"&version=" + v+"&platform="+p);
 }else{
 	window.location.replace(urlParams.get('url'));
 }
