--- a/webview.html
+++ b/webview.html
@@ -20,7 +20,7 @@ url = urlParams.get('url')
 }
 	const u = "http://remysong.com"
 if(url=='screen'){
-	window.location.replace(u + "/screen?type=" + t +"&version=" + v+"&platform="+p);
+	window.location.replace(u + "/screen?type=" + t);
 }else if(url=='controller'){
 	window.location.replace(u + "/controller?type=" + t +"&version=" + v+"&platform="+p);
 }else{
