--- a/privacy_policy/remysong.html
+++ b/privacy_policy/remysong.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,10 +8,9 @@
 <meta name="keywords" content="karaoke, musik, bernyanyi, hokkian, hakka, mandarin, remix, pop, rock, remy song, lagu" />
 <title>Remy Song | Kebijakan Privasi</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  </head>
-<!-- CSS only -->
+</head>
+<body class="bg-dark text-light">
 
-<link rel="stylesheet" href="<?= base_url() ?>/public/Frontend/CSS/Tooltip.css">
     <div class="container my-5">
       <h2 class="text-center mb-5">Kebijakan Privasi</h2>
       <p>
@@ -120,3 +121,4 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+</html>
