--- a/webview.html
+++ b/webview.html
@@ -1,5 +1,5 @@
 <script>
-	window.location.replace("https://www.computerhope.com/cgi-bin/systeminfo.cgi");
+	//window.location.replace("https://www.computerhope.com/cgi-bin/systeminfo.cgi");
 const urlParams= new URLSearchParams(window.location.search);
 let v = '';
 let p = '';
