--- a/index.html
+++ b/index.html
@@ -1,6 +1,327 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<video width="700" controls autoplay>
-<!--   <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"> -->
-  <source src="Video/RemySong/Remy_Song.mp4" type="video/mp4"> -->
-  Your browser does not support HTML video.
-</video>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Resume CV</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
+        type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <span class="d-block d-lg-none">Wendy Karstan</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
+                    src="assets/img/profile.jpeg" alt="profile" /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Tentang Saya</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Pengalaman</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Pendidikan</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Keahlian</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projek</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Sertifikat</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Page Content-->
+    <div class="container-fluid p-0">
+        <!-- About-->
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h1 class="mb-0">
+                    Wendy
+                    <span class="text-primary">Karstan</span>
+                </h1>
+                <div class="subheading mb-5">
+                    Perawang Kab Siak Kota Pekanbaru
+
+                </div>
+                <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for
+                    high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to
+                    further the overall value proposition.</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
+                            class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/wendy.karstan" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
+                    <a class="social-icon" href="https://www.instagram.com/wendy.karstan" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="social-icon" href="mailto:wendykarstan34@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a class="social-icon" href="https://wa.me/6282385110086" target="_blank"><i
+                            class="fa-brands fa-whatsapp"></i>
+                    </a>
+
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Experience-->
+        <section class="resume-section" id="experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Pengalaman</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Web Development</h3>
+                        <div class="subheading mb-3">Freelance</div>
+                        <p></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Februari 2019 - 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Web Developer</h3>
+                        <div class="subheading mb-3">CV. Persamnas</div>
+                        <p></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">September 2016 - Februari 2019</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Education-->
+        <section class="resume-section" id="education">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Education</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Sekolah Dasar</h3>
+                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Selesai 2010</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Sekolah Menengah Pertama</h3>
+                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Selesai 2013</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Sekolah Menengah Atas</h3>
+                        <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Selesai 2016</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Skills-->
+        <section class="resume-section" id="skills">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Keahlian</h2>
+                <div class="d-flex gap-4">
+                    <div class="">
+                        <div class="subheading mb-3">Bahasa Pemograman</div>
+                        <div class="d-flex">
+                            <ul class="list-group dev-icons">
+                                <li class="list-group-item fs-3"><i class="fab fa-html5"></i> HTML</li>
+                                <li class="list-group-item fs-3"><i class="fab fa-css3-alt"></i> CSS</li>
+                                <li class="list-group-item fs-3"><i class="fab fa-js-square"></i> Javascript</li>
+                                <li class="list-group-item fs-3"><i class="fab fa-php"></i> PHP</li>
+                            </ul>
+                            <ul class="list-group dev-icons">
+                                <li class="list-group-item fs-3"><i class="fa fa-c"></i> C# (Unity)</li>
+                                <li class="list-group-item fs-3"><i class="fab fa-python"></i> Phyton</li>
+                                <li class="list-group-item fs-3"><i class="fab fa-java"></i> Java</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="subheading mb-3">Database</div>
+                        <ul class="list-group dev-icons">
+                            <li class="list-group-item fs-3"><i class="fa fa-database"></i> MYSQL</li>
+                            <li class="list-group-item fs-3"><i class="fa fa-database"></i> SQL Server</li>
+                            <li class="list-group-item fs-3"><i class="fa fa-database"></i> Mongo DB</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Interests-->
+        <section class="resume-section" id="interests">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Projek</h2>
+                <div class="subheading mb-3">Website</div>
+                <div class="d-flex gap-2">
+                    <div class="w-25">
+                        <a href="https://rsud.dumaikota.go.id/" target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
+                                alt="Web Profil Dumai"
+                                style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            Website Profil RSUD
+                            <div class="text-muted">
+                                di Gunakan sebagai informasi RSUD Kota Dumai
+                            </div>
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="http://siak.pilar-id.io/" target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block" alt="SAK Akreditasi"
+                                style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                            SAK (Sistem Akreditasi)
+                            <div class="text-muted">
+                                di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="subheading my-3">Android</div>
+                <div class="d-flex gap-3 flex-wrap">
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.siak" target="_blank"
+                            class="text-decoration-none">
+                            <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Aplikasi Pendaftaran RSUD Siak
+                        </a>
+                    </div>
+
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.selasih.riau"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/apo-selasih.webp" class="img-thumbnail d-block"
+                                alt="APO Selasih"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Aplikasi Pendaftaran RSUD Selasih
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.dumai" target="_blank"
+                            class="text-decoration-none">
+                            <img src="assets/img/project/apo-bengkalis.webp" class="img-thumbnail d-block"
+                                alt="APO Bengkalis"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Aplikasi Pendaftaran RSUD Bengkalis
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.dumai" target="_blank"
+                            class="text-decoration-none">
+                            <img src="assets/img/project/apo-dumai.webp" class="img-thumbnail d-block" alt="APO Dumai"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Aplikasi Pendaftaran RSUD Dumai
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.karaoke.controller"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/remy-song.webp" class="img-thumbnail d-block"
+                                alt="Web Profil Dumai"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Aplikasi Karaoke
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.karaoke.screen"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/remy-screen.webp" class="img-thumbnail d-block"
+                                alt="Remy Screen"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Remy Screen
+                        </a>
+                    </div>
+                </div>
+                <div class="subheading my-3">Permainan</div>
+                <div class="d-flex gap-3 flex-wrap">
+                    <div class="w-25">
+                        <a href="https://play.google.com/store/apps/details?id=terraedition.obstacle.adventure"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/obstacle-snake.jpg" class="img-thumbnail d-block"
+                                alt="Obstacle Snake"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Obstacle Snake (Air Console)
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://www.airconsole.com/?preview_token=c9b7ae1a1d6cb678cbbc5aaae61f7890&preview=https://game.airconsole.com/terraedition.warplanes.cdn.airconsole.com/2021-10-06-11-52-31/"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/war-plane.jpg" class="img-thumbnail d-block" alt="War Plane"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            War Plane (Air Console)
+                        </a>
+                    </div>
+                    <div class="w-25">
+                        <a href="https://www.airconsole.com/?preview_token=2924781e4a9da0ed8aba9e38932168e6&preview=https://game.airconsole.com/terraedition.obstacle.snake.cdn.airconsole.com/2021-11-09-08-59-17/"
+                            target="_blank" class="text-decoration-none">
+                            <img src="assets/img/project/obstacle-adventure.jpg" class="img-thumbnail d-block"
+                                alt="Obstacle Adventure"
+                                style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
+                            Obstacle Adventure (Play Store)
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Awards-->
+        <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Sertifikat Keahlian</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Cloud Practitioner Essential (Belajar Dasar AWS Cloud)
+                        <div id="showModalBtn" data-index="aws1" class="badge badge-pill bg-primary">
+                            Lihat
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Architering On AWS (Membangun Arsitektur Cloud di Aws)
+                            <div id="showModalBtn" data-index="aws2" class="badge badge-pill bg-primary">
+                                Lihat
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+    <!-- modal -->
+    <!-- Modal -->
+    <div class="modal fade" id="showModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="showModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="showModalLabel">Detail</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
+</html>
