--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for
                     high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to
                     further the overall value proposition.</p>
-                <div class="social-icons">
+                <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/wendy.karstan" target="_blank"><i
@@ -67,7 +67,6 @@
                     <a class="social-icon" href="https://wa.me/6282385110086" target="_blank"><i
                             class="fa-brands fa-whatsapp"></i>
                     </a>
-
                 </div>
             </div>
         </section>
@@ -116,7 +115,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Sekolah Menengah Atas</h3>
+                        <h3 class="mb-0">Sekolah Menengah Kejuruan ( TKJ )</h3>
                         <div class="subheading mb-3">Yayasan Pendidikan Persada Indah</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Selesai 2016</span></div>
@@ -128,10 +127,10 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Keahlian</h2>
-                <div class="d-flex gap-4">
+                <div class="d-flex gap-4 flex-wrap">
                     <div class="">
                         <div class="subheading mb-3">Bahasa Pemograman</div>
-                        <div class="d-flex">
+                        <div class="d-flex flex-wrap">
                             <ul class="list-group dev-icons">
                                 <li class="list-group-item fs-3"><i class="fab fa-html5"></i> HTML</li>
                                 <li class="list-group-item fs-3"><i class="fab fa-css3-alt"></i> CSS</li>
@@ -153,6 +152,19 @@
                             <li class="list-group-item fs-3"><i class="fa fa-database"></i> Mongo DB</li>
                         </ul>
                     </div>
+                </div>
+                <div class="subheading my-3">Aplikasi yang di Gunakan</div>
+                <div class="d-flex gap-3">
+                    <ul class="list-group dev-icons">
+                        <li class="list-group-item fs-3"><i class="fa fa-file-lines"></i> Visual Studio Code</li>
+                        <li class="list-group-item fs-3"><i class="fa fa-server"></i> XAMPP</li>
+                        <li class="list-group-item fs-3"><i class="fa-brands fa-unity"></i> UNITY</li>
+                    </ul>
+                    <ul class="list-group dev-icons">
+                        <li class="list-group-item fs-3"><i class="fa-brands fa-android"></i> Android Studio</li>
+                        <li class="list-group-item fs-3"><i class="fa fa-image"></i> Adobe Illustrator</li>
+                        <li class="list-group-item fs-3"><i class="fa fa-video"></i> Cyberlink Power Director</li>
+                    </ul>
                 </div>
             </div>
         </section>
