--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                     Wendy
                     <span class="text-primary">Karstan</span>
                 </h1>
+                <h6>
+                    (TerraEdition)
+                </h6>
                 <div class="subheading mb-5">
                     Perawang Kab Siak Kota Pekanbaru
-
                 </div>
-                <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for
-                    high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to
-                    further the overall value proposition.</p>
+                <p class="lead mb-5"> </p>
                 <div class="d-flex flex-wrap social-icons gap-3">
                     <a class="social-icon" href="https://github.com/TerraEdition" target="_blank"><i
                             class="fab fa-github"></i></a>
