--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h2 class="mb-5">Keahlian</h2>
                 <div class="d-flex gap-4 flex-wrap">
                     <div class="">
-                        <div class="subheading mb-3">Bahasa Pemograman</div>
+                        <div class="subheading mb-3">Pemograman</div>
                         <div class="d-flex flex-wrap">
                             <ul class="list-group dev-icons">
                                 <li class="list-group-item fs-3"><i class="fab fa-html5"></i> HTML</li>
