--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="subheading mb-3">Website</div>
                 <div class="d-flex gap-2">
                     <div class="w-25">
-                        <a href="https://rsud.dumaikota.go.id/" target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="profile-dumai" type="button">
                             <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
                                 style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
@@ -184,102 +184,93 @@
                             <div class="text-muted">
                                 di Gunakan sebagai informasi RSUD Kota Dumai
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="http://siak.pilar-id.io/" target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="sak" type="button">
                             <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block" alt="SAK Akreditasi"
                                 style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
                             SAK (Sistem Akreditasi)
                             <div class="text-muted">
                                 di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
                 <div class="subheading my-3">Android</div>
                 <div class="d-flex gap-3 flex-wrap">
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.siak" target="_blank"
-                            class="text-decoration-none">
+                        <div id="showModalBtn" data-index="apo-siak" type="button">
                             <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Aplikasi Pendaftaran RSUD Siak
-                        </a>
+                        </div>
                     </div>
 
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.selasih.riau"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="apo-selasih" type="button">
                             <img src="assets/img/project/apo-selasih.webp" class="img-thumbnail d-block"
                                 alt="APO Selasih"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Aplikasi Pendaftaran RSUD Selasih
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.dumai" target="_blank"
-                            class="text-decoration-none">
+                        <div id="showModalBtn" data-index="apo-bengkalis" type="button">
                             <img src="assets/img/project/apo-bengkalis.webp" class="img-thumbnail d-block"
                                 alt="APO Bengkalis"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Aplikasi Pendaftaran RSUD Bengkalis
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.rsud.dumai" target="_blank"
-                            class="text-decoration-none">
+                        <div id="showModalBtn" data-index="apo-dumai" type="button">
                             <img src="assets/img/project/apo-dumai.webp" class="img-thumbnail d-block" alt="APO Dumai"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Aplikasi Pendaftaran RSUD Dumai
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.karaoke.controller"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="remy-song" type="button">
                             <img src="assets/img/project/remy-song.webp" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
-                            Aplikasi Karaoke
-                        </a>
+                            Remy Song - Karaoke
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.karaoke.screen"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="remy-screen" type="button">
                             <img src="assets/img/project/remy-screen.webp" class="img-thumbnail d-block"
                                 alt="Remy Screen"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Remy Screen
-                        </a>
+                        </div>
                     </div>
                 </div>
                 <div class="subheading my-3">Permainan</div>
                 <div class="d-flex gap-3 flex-wrap">
                     <div class="w-25">
-                        <a href="https://play.google.com/store/apps/details?id=terraedition.obstacle.adventure"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="obstacle-snake" type="button">
                             <img src="assets/img/project/obstacle-snake.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Snake"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Obstacle Snake (Air Console)
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://www.airconsole.com/?preview_token=c9b7ae1a1d6cb678cbbc5aaae61f7890&preview=https://game.airconsole.com/terraedition.warplanes.cdn.airconsole.com/2021-10-06-11-52-31/"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="war-plane" type="button">
                             <img src="assets/img/project/war-plane.jpg" class="img-thumbnail d-block" alt="War Plane"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             War Plane (Air Console)
-                        </a>
+                        </div>
                     </div>
                     <div class="w-25">
-                        <a href="https://www.airconsole.com/?preview_token=2924781e4a9da0ed8aba9e38932168e6&preview=https://game.airconsole.com/terraedition.obstacle.snake.cdn.airconsole.com/2021-11-09-08-59-17/"
-                            target="_blank" class="text-decoration-none">
+                        <div id="showModalBtn" data-index="obstacle-adventure" type="button">
                             <img src="assets/img/project/obstacle-adventure.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Adventure"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Obstacle Adventure (Play Store)
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -293,7 +284,7 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         Cloud Practitioner Essential (Belajar Dasar AWS Cloud)
-                        <div id="showModalBtn" data-index="aws1" class="badge badge-pill bg-primary">
+                        <div id="showModalBtn" data-index="aws1" class="badge badge-pill bg-primary" type="button">
                             Lihat
                         </div>
                     </li>
@@ -301,7 +292,7 @@
                         <div>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Architering On AWS (Membangun Arsitektur Cloud di Aws)
-                            <div id="showModalBtn" data-index="aws2" class="badge badge-pill bg-primary">
+                            <div id="showModalBtn" data-index="aws2" class="badge badge-pill bg-primary" type="button">
                                 Lihat
                             </div>
                         </div>
@@ -325,7 +316,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+
                 </div>
             </div>
         </div>
