--- a/index.html
+++ b/index.html
@@ -174,22 +174,22 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Projek</h2>
                 <div class="subheading mb-3">Website</div>
-                <div class="d-flex gap-2">
-                    <div style="width: 25%;">
+                <div class="d-flex gap-2 flex-wrap">
+                    <div>
                         <div id="showModalBtn" data-index="profile-dumai" type="button">
                             <img src="assets/img/project/dumai.jpeg" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
-                                style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
                             Website Profil RSUD
                             <div class="text-muted">
                                 di Gunakan sebagai informasi RSUD Kota Dumai
                             </div>
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="sak" type="button">
                             <img src="assets/img/project/sak.jpeg" class="img-thumbnail d-block" alt="SAK Akreditasi"
-                                style="width:10vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
+                                style="width:20vw;object-fit: cover;object-position: 100% 0;height: 30vh;">
                             SAK (Sistem Akreditasi)
                             <div class="text-muted">
                                 di Gunakan sebagai bantuan untuk Akreditasi Rumah Sakit
@@ -199,7 +199,7 @@
                 </div>
                 <div class="subheading my-3">Android</div>
                 <div class="d-flex gap-3 flex-wrap">
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="apo-siak" type="button">
                             <img src="assets/img/project/apo-siak.webp" class="img-thumbnail d-block" alt="APO SIAK"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
@@ -207,7 +207,7 @@
                         </div>
                     </div>
 
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="apo-selasih" type="button">
                             <img src="assets/img/project/apo-selasih.webp" class="img-thumbnail d-block"
                                 alt="APO Selasih"
@@ -215,7 +215,7 @@
                             Aplikasi Pendaftaran RSUD Selasih
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="apo-bengkalis" type="button">
                             <img src="assets/img/project/apo-bengkalis.webp" class="img-thumbnail d-block"
                                 alt="APO Bengkalis"
@@ -223,14 +223,14 @@
                             Aplikasi Pendaftaran RSUD Bengkalis
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="apo-dumai" type="button">
                             <img src="assets/img/project/apo-dumai.webp" class="img-thumbnail d-block" alt="APO Dumai"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             Aplikasi Pendaftaran RSUD Dumai
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="remy-song" type="button">
                             <img src="assets/img/project/remy-song.webp" class="img-thumbnail d-block"
                                 alt="Web Profil Dumai"
@@ -238,7 +238,7 @@
                             Remy Song - Karaoke
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="remy-screen" type="button">
                             <img src="assets/img/project/remy-screen.webp" class="img-thumbnail d-block"
                                 alt="Remy Screen"
@@ -249,7 +249,7 @@
                 </div>
                 <div class="subheading my-3">Permainan</div>
                 <div class="d-flex gap-3 flex-wrap">
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="obstacle-snake" type="button">
                             <img src="assets/img/project/obstacle-snake.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Snake"
@@ -257,14 +257,14 @@
                             Obstacle Snake (Air Console)
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="war-plane" type="button">
                             <img src="assets/img/project/war-plane.jpg" class="img-thumbnail d-block" alt="War Plane"
                                 style="width:20vw;object-fit: cover;object-position: center;height: 30vh;">
                             War Plane (Air Console)
                         </div>
                     </div>
-                    <div style="width: 25%;">
+                    <div>
                         <div id="showModalBtn" data-index="obstacle-adventure" type="button">
                             <img src="assets/img/project/obstacle-adventure.jpg" class="img-thumbnail d-block"
                                 alt="Obstacle Adventure"
